// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS Module 1`] = `
function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var attrs = __SCOPE__.attrs;
		var __this__ = __SCOPE__.__this__;
		var __blocks__ = __SCOPE__.__blocks__;
		var __slots__ = __SCOPE__.__slots__;
		var __classNames__ = __SCOPE__.__classNames__;

		var __CLN = __STDLIB_CSS_MODULE(__classNames__);
		var __super__ = {};

		function __SLOT_children(__super__) {
			return "";
		}
		__super__["children"] = __SLOT_children;

		return "<div class=\\"" + __CLN("alert " + __STDLIB_HTML_ENCODE(attrs.x) + " is-" + __STDLIB_HTML_ENCODE(attrs.y)) + "\\">" + __STDLIB_SLOT(__slots__, __super__, "children", __SLOT_children) + "</div>";
	}
`;

exports[`Icon (short) 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_HTML_ENCODE = __STDLIB.HTML_ENCODE;
	function Icon(attrs, __slots) {
		var __super = {attrs: attrs},
		name = attrs.name
		return "<i class=\\"icon-" + __STDLIB_HTML_ENCODE(name) + "\\"></i>";
	}

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var x = __SCOPE__.x;
		var __blocks__ = __SCOPE__.__blocks__;

		return Icon({name: (x)});
	}
}
`;

exports[`Icon 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_HTML_ENCODE = __STDLIB.HTML_ENCODE;
	function Icon(attrs, __slots) {
		var __super = {attrs: attrs},
		name = attrs.name
		return "<i class=\\"icon-" + __STDLIB_HTML_ENCODE(name) + "\\"></i>";
	}

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var x = __SCOPE__.x;
		var __blocks__ = __SCOPE__.__blocks__;

		return Icon({name: (x)});
	}
}
`;

exports[`Pseudo Elements 1`] = `
function templateFactory() {
	"use strict";
	function __BLOCK_INIT(blocks, name) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			blocks[name] = __COMPILER__.compileBlock(blocks[name]);
		}
	}

	function __BLOCK_RENDER(blocks, name, attrs, slots) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			var block = new XBlock(attrs, {slots: slots});
			return block.__view__;
		} else {
			return '<div data-block="' + name + '" class="block-dummy block-dummy-loading"></div>';
		}
	}

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var text = __SCOPE__.text;
		var __blocks__ = __SCOPE__.__blocks__;

		__BLOCK_INIT(__blocks__, "Pseudo");
		return __BLOCK_RENDER(__blocks__, "Pseudo", {value: (text)}, null);
	}
}
`;

exports[`Pseudo Elements: override by name 1`] = `
function templateFactory() {
	"use strict";
	function __BLOCK_INIT(blocks, name) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			blocks[name] = __COMPILER__.compileBlock(blocks[name]);
		}
	}

	function __BLOCK_RENDER(blocks, name, attrs, slots) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			var block = new XBlock(attrs, {slots: slots});
			return block.__view__;
		} else {
			return '<div data-block="' + name + '" class="block-dummy block-dummy-loading"></div>';
		}
	}

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var __blocks__ = __SCOPE__.__blocks__;

		__BLOCK_INIT(__blocks__, "Pseudo");
		var __ROOT = __BLOCK_RENDER(__blocks__, "Pseudo", {}, {slotik: function __SLOT_slotik(__super__) {
			return "OK";
			}});

			return __ROOT
		}
	}
`;

exports[`Pseudo Elements: override default 1`] = `
function templateFactory() {
	"use strict";
	function __BLOCK_INIT(blocks, name) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			blocks[name] = __COMPILER__.compileBlock(blocks[name]);
		}
	}

	function __BLOCK_RENDER(blocks, name, attrs, slots) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			var block = new XBlock(attrs, {slots: slots});
			return block.__view__;
		} else {
			return '<div data-block="' + name + '" class="block-dummy block-dummy-loading"></div>';
		}
	}

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var __blocks__ = __SCOPE__.__blocks__;

		__BLOCK_INIT(__blocks__, "Pseudo");
		var __ROOT = __BLOCK_RENDER(__blocks__, "Pseudo", {}, {children: function __SLOT_children(__super__) {
			return "OK";
			}});

			return __ROOT
		}
	}
`;

exports[`Pseudo Elements: super 1`] = `
function templateFactory(__DEPS__) {
	"use strict";
	var __STDLIB = __DEPS__.stdlib;
	var __STDLIB_HTML_ENCODE = __STDLIB.HTML_ENCODE;
	function __BLOCK_INIT(blocks, name) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			blocks[name] = __COMPILER__.compileBlock(blocks[name]);
		}
	}

	function __BLOCK_RENDER(blocks, name, attrs, slots) {
		var XBlock = blocks[name];

		if (XBlock.template) {
			var block = new XBlock(attrs, {slots: slots});
			return block.__view__;
		} else {
			return '<div data-block="' + name + '" class="block-dummy block-dummy-loading"></div>';
		}
	}

	return function compiledTemplate(__SCOPE__, __OPTIONS__) {
		__SCOPE__ = __SCOPE__ || {};
		var x = __SCOPE__.x;
		var text = __SCOPE__.text;
		var __blocks__ = __SCOPE__.__blocks__;

		__BLOCK_INIT(__blocks__, "Pseudo");
		var __ROOT = __BLOCK_RENDER(__blocks__, "Pseudo", {value: (x)}, {children: function __SLOT_children(__super__) {
			return __STDLIB_HTML_ENCODE(text) + ":" + __super__["children"]();
			}});

			return __ROOT
		}
	}
`;

exports[`Pseudo Elements: super 2`] = `undefined`;
